<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thedorkknightrises.portfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/btn1"
                    android:onClick="onBtnClick"
                    android:padding="16dp">
                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/btn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onBtnClick"
                        android:layout_marginTop="8dp"
                        android:id="@+id/btnt1"
                        android:autoLink="web"
                        android:text="@string/desc1"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/btn2"
                    android:onClick="onBtnClick"
                    android:padding="16dp">
                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onBtnClick"
                        android:layout_marginTop="8dp"
                        android:id="@+id/btnt2"
                        android:autoLink="web"
                        android:text="@string/desc2"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/btn3"
                    android:onClick="onBtnClick"
                    android:padding="16dp">
                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/btn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onBtnClick"
                        android:layout_marginTop="8dp"
                        android:id="@+id/btnt3"
                        android:autoLink="web"
                        android:text="@string/desc3"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/btn4"
                    android:onClick="onBtnClick"
                    android:padding="16dp">
                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/btn4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onBtnClick"
                        android:layout_marginTop="8dp"
                        android:id="@+id/btnt4"
                        android:autoLink="web"
                        android:text="@string/desc4"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/btn5"
                    android:onClick="onBtnClick"
                    android:padding="16dp">
                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/btn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onBtnClick"
                        android:layout_marginTop="8dp"
                        android:id="@+id/btnt5"
                        android:autoLink="web"
                        android:text="@string/desc5"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/btn6"
                    android:onClick="onBtnClick"
                    android:padding="16dp">
                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/btn6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onBtnClick"
                        android:layout_marginTop="8dp"
                        android:id="@+id/btnt6"
                        android:autoLink="web"
                        android:text="@string/desc6"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
